@@ -36,6 +36,7 @@ void OraclePreparedStatement_setDouble(T P, int parameterIndex, double x);
 void OraclePreparedStatement_setBlob(T P, int parameterIndex, const void *x, int size);
 void OraclePreparedStatement_execute(T P);
 ResultSet_T OraclePreparedStatement_executeQuery(T P);
+long long int OraclePreparedStatement_rowsChanged(T P);
 const char *OraclePreparedStatement_getLastError(int err, OCIError *errhp);
 #undef T
 #endif
